--- a/css/style.css
+++ b/css/style.css
@@ -285,6 +285,10 @@ html {
 }
 
 /* === Gap ========= */
+.gap-2 {
+    gap: 0.2rem;
+}
+
 .gap-5 {
     gap: 0.5rem;
 }
@@ -307,8 +311,16 @@ html {
 }
 
 /* === Column ========= */
+.col-1 {
+    flex: 0 0 calc(100% - 6.2rem);
+}
+
 .col-2 {
     flex: 0 0 calc(calc(100% - 2rem) /2);
+}
+
+.col-2-gap-5 {
+    flex: 0 0 calc(calc(100% - 0.5rem) /2);
 }
 
 /* === Justify Content ========= */
@@ -363,6 +375,10 @@ html {
     border-radius: 1rem;
 }
 
+.rounded-circle-29 {
+    border-radius: 2.9rem;
+}
+
 .rounded-circle-35 {
     border-radius: 3.5rem;
 }
@@ -374,6 +390,14 @@ html {
 /* === Padding Top ========= */
 .pt-2 {
     padding-top: 0.2rem;
+}
+
+.pt-4 {
+    padding-top: 0.4rem;
+}
+
+.pt-6 {
+    padding-top: 0.6rem;
 }
 
 .pt-14 {
@@ -388,6 +412,14 @@ html {
 
 
 /* === Padding Bottom ========= */
+.pb-1 {
+    padding-bottom: 0.1rem;
+}
+
+.pb-4 {
+    padding-bottom: 0.4rem;
+}
+
 .pb-12 {
     padding-bottom: 1.2rem;
 }
@@ -406,9 +438,24 @@ html {
 }
 
 /* === Padding X ========= */
+.p-30 {
+    padding: 3rem;
+}
+
+/* === Padding X ========= */
 .px-2 {
     padding-left: 0.2rem;
     padding-right: 0.2rem;
+}
+
+.px-4 {
+    padding-left: 0.4rem;
+    padding-right: 0.4rem;
+}
+
+.px-6 {
+    padding-left: 0.6rem;
+    padding-right: 0.6rem;
 }
 
 .px-12 {
@@ -504,16 +551,33 @@ html {
     margin-top: 1rem;
 }
 
+
 .mt-16 {
     margin-top: 1.6rem;
+}
+
+.mt-17 {
+    margin-top: 1.7rem;
 }
 
 .mt-18 {
     margin-top: 1.8rem;
 }
 
+.mt-19 {
+    margin-top: 1.9rem;
+}
+
 .mt-20 {
     margin-top: 2rem;
+}
+
+.mt-21 {
+    margin-top: 2.1rem;
+}
+
+.mt-23 {
+    margin-top: 2.3rem;
 }
 
 .mt-44 {
@@ -526,6 +590,10 @@ html {
 
 .mt-55 {
     margin-top: 5.5rem;
+}
+
+.mt-56 {
+    margin-top: 5.6rem;
 }
 
 .mt-60 {
@@ -776,13 +844,22 @@ html {
 .btn-trending-prev:hover,
 .btn-trending-next:hover,
 .btn-arrivals-prev:hover,
-.btn-arrivals-next:hover {
+.btn-arrivals-next:hover,
+.btn-feedback-prev:hover,
+.btn-feedback-next:hover {
     background-color: var(--black);
     color: var(--white);
 }
 
+.btn-slideshow-trending,
+.btn-slideshow-arrivals,
+.btn-slideshow-feedback {
+    user-select: none;
+}
+
 .wrapper:hover .btn-slideshow-trending,
-.wrapper:hover .btn-slideshow-arrivals {
+.wrapper:hover .btn-slideshow-arrivals,
+.wrapper:hover .btn-slideshow-feedback {
     opacity: 1;
 }
 
@@ -819,6 +896,11 @@ html {
 .line-notification {
     width: 100%;
     height: 0.1rem;
+}
+
+.card-feedback {
+    scroll-snap-align: center;
+    user-select: none;
 }
 
 /* === Slider ==================== */
