--- a/css/style.css
+++ b/css/style.css
@@ -89,6 +89,23 @@ html {
     color: var(--green);
 }
 
+/* === Hover ================= */
+.hover-right-5 {
+    transition: transform 0.2s ease-in-out;
+}
+
+.hover-right-5:hover {
+    transform: translateX(5%);
+}
+
+.hover-black:hover {
+    color: var(--black);
+}
+
+.hover-black:hover svg {
+    filter: brightness(0) invert(0);
+}
+
 /*=== Cursor =================*/
 .cursor-pointer {
     cursor: pointer;
@@ -288,6 +305,10 @@ html {
     flex-direction: row-reverse;
 }
 
+.flex-grow-1 {
+    flex-grow: 1;
+}
+
 /* === Gap ========= */
 .gap-2 {
     gap: 0.2rem;
@@ -312,6 +333,10 @@ html {
 
 .gap-25 {
     gap: 2.5rem;
+}
+
+.gap-30 {
+    gap: 3rem;
 }
 
 /* === Column ========= */
@@ -362,6 +387,15 @@ html {
     border: solid;
 }
 
+.border-none {
+    border: none;
+    outline: none;
+}
+
+.border-top {
+    border-top: solid;
+}
+
 .border-1 {
     border-width: 0.1rem;
 }
@@ -375,6 +409,10 @@ html {
 }
 
 /*=== Rounded =================*/
+.rounded-circle-5 {
+    border-radius: 0.5rem;
+}
+
 .rounded-circle-10 {
     border-radius: 1rem;
 }
@@ -408,12 +446,22 @@ html {
     padding-top: 1.4rem;
 }
 
+.pt-20 {
+    padding-top: 2rem;
+}
+
+.pt-18 {
+    padding-top: 1.8rem;
+}
+
 .pt-28 {
     padding-top: 2.8rem;
 }
 
 /* === Padding Left ========= */
-
+.pl-20 {
+    padding-left: 2rem;
+}
 
 /* === Padding Bottom ========= */
 .pb-1 {
@@ -428,6 +476,20 @@ html {
     padding-bottom: 1.2rem;
 }
 
+.pb-16 {
+    padding-bottom: 1.6rem;
+}
+
+.pb-17 {
+    padding-bottom: 1.7rem;
+}
+
+
+.pb-18 {
+    padding-bottom: 1.8rem;
+}
+
+
 .pb-25 {
     padding-bottom: 2.5rem;
 }
@@ -439,6 +501,10 @@ html {
 /* === Padding Right ========= */
 .pr-12 {
     padding-right: 1.2rem;
+}
+
+.pr-30 {
+    padding-right: 4.2rem;
 }
 
 /* === Padding X ========= */
@@ -492,6 +558,11 @@ html {
     padding-right: 3rem;
 }
 
+.px-40 {
+    padding-left: 4rem;
+    padding-right: 4rem;
+}
+
 .px-100 {
     padding-left: 10rem;
     padding-right: 10rem;
@@ -533,6 +604,11 @@ html {
     padding-bottom: 1.8rem;
 }
 
+.py-20 {
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+}
+
 .py-23 {
     padding-top: 2.3rem;
     padding-bottom: 2.3rem;
@@ -555,6 +631,9 @@ html {
     margin-top: 1rem;
 }
 
+.mt-12 {
+    margin-top: 1.2rem;
+}
 
 .mt-16 {
     margin-top: 1.6rem;
@@ -584,6 +663,14 @@ html {
     margin-top: 2.3rem;
 }
 
+.mt-27 {
+    margin-top: 2.7rem;
+}
+
+.mt-28 {
+    margin-top: 2.8rem;
+}
+
 .mt-44 {
     margin-top: 4.4rem;
 }
@@ -600,8 +687,16 @@ html {
     margin-top: 5.6rem;
 }
 
+.mt-58 {
+    margin-top: 5.8rem;
+}
+
 .mt-60 {
     margin-top: 6rem;
+}
+
+.mt-65 {
+    margin-top: 6.5rem;
 }
 
 /* === Margin Left ========= */
@@ -634,12 +729,24 @@ html {
     margin-bottom: 1.4rem;
 }
 
+.mb-17 {
+    margin-bottom: 1.7rem;
+}
+
 .mb-18 {
     margin-bottom: 1.8rem;
 }
 
 .mb-20 {
     margin-bottom: 2rem;
+}
+
+.mb-22 {
+    margin-bottom: 2.2rem;
+}
+
+.mb-30 {
+    margin-bottom: 2.8rem;
 }
 
 .mb-34 {
@@ -777,6 +884,10 @@ html {
     font-size: 1.8rem;
 }
 
+.fs-23 {
+    font-size: 2.3rem;
+}
+
 .fs-30 {
     font-size: 3rem;
 }
@@ -907,6 +1018,17 @@ html {
     user-select: none;
 }
 
+.footer-list {
+    list-style: none;
+    overflow: hidden;
+    max-height: 0;
+    transition: max-height 0.5s ease-in-out;
+}
+
+.footer-list .active {
+    max-height: none;
+}
+
 /* === Slider ==================== */
 .slider {
     width: 100%;
@@ -970,16 +1092,3 @@ html {
 .rate-label:hover ~ label {
     color: var(--black);
 }
-
-/* -------- */
-/* .carousel-ig {
-    scroll-snap-type: x mandatory;
-    scroll-snap-align: center;
-    overflow-x: scroll;
-    display: flex;
-    scroll-behavior: smooth;
-}
-.carousel-ig img {
-    scroll-snap-align: center;
-    object-fit: cover;
-} */
