--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,6 @@ html {
     /* background-color: var(--black); */
 }
 
-
 /* === Pseudo =============== */
 :root {
     /* == Color === */
@@ -301,6 +300,10 @@ html {
     flex-direction: column;
 }
 
+.flex-wrap {
+    flex-wrap: wrap;
+}
+
 .flex-row-reverse {
     flex-direction: row-reverse;
 }
@@ -318,6 +321,10 @@ html {
     gap: 0.5rem;
 }
 
+.gap-7 {
+    gap: 0.7rem;
+}
+
 .gap-10 {
     gap: 1rem;
 }
@@ -326,6 +333,9 @@ html {
     gap: 1.1rem;
 }
 
+.gap-17 {
+    gap: 1.7rem;
+}
 
 .gap-20 {
     gap: 2rem;
@@ -340,7 +350,7 @@ html {
 }
 
 /* === Column ========= */
-.col-1 {
+.col-1-gap-2 {
     flex: 0 0 calc(100% - 6.2rem);
 }
 
@@ -380,6 +390,10 @@ html {
 
 .align-items-center {
     align-items: center;
+}
+
+.align-content-center {
+    align-content: center;
 }
 
 /* === Border ================= */
@@ -753,8 +767,8 @@ html {
     margin-bottom: 3.4rem;
 }
 
-.mb-200 {
-    margin-bottom: 20rem;
+.mb-106 {
+    margin-bottom: 10.6rem;
 }
 
 /* === Margin Right ========= */
@@ -768,6 +782,10 @@ html {
 
 .mr-5 {
     margin-right: 0.5rem;
+}
+
+.mr-16 {
+    margin-right: 1.6rem;
 }
 
 .mr-49 {
