--- a/css/responsive.css
+++ b/css/responsive.css
@@ -91,6 +91,10 @@
         padding-top: 2rem;
     }
 
+    .mb-md-73 {
+        margin-bottom: 7.3rem;
+    }
+
     .top-md-225 {
         top: 22.5rem;
     }
@@ -334,8 +338,8 @@
     margin-top: 10rem;
    }
 
-   .mt-xl-104 {
-    margin-top: 10.4rem;
+   .mt-xl-107 {
+    margin-top: 10.7rem;
    }
 
    .mb-xl-12 {
