--- a/css/style.css
+++ b/css/style.css
@@ -9,12 +9,16 @@ html {
     /* == Color === */
     --black: #111111;
     --white: #FFFFFF;
+    --white-smoke: #F5F5F5;
     --gray-light: #DDDDDD;
     --gray-lighter: #EBEBEB;
     --gray-medium: #999999;
     --gray-dark: #555555;
     --orange-red: #d0473e;
     --green: #26A66A;
+    --coral-red: #e74c3c;
+    --strong-red: #c0392b;
+    --dark-red: #c0392b;
     --color-trending: #F5F5F5;
     --color-slider: #f6f6f6;
     /* ========= */
@@ -29,6 +33,10 @@ html {
 
 .bg-white {
     background-color: var(--white);
+}
+
+.bg-white-smoke {
+    background-color: var(--white-smoke);
 }
 
 .bg-gray-light {
@@ -89,12 +97,12 @@ html {
 }
 
 /* === Hover ================= */
-.hover-right-5 {
+.hover-right-6 {
     transition: transform 0.2s ease-in-out;
 }
 
-.hover-right-5:hover {
-    transform: translateX(5%);
+.hover-right-6:hover {
+    transform: translateX(6%);
 }
 
 .hover-black:hover {
@@ -120,9 +128,18 @@ html {
     position: absolute;
 }
 
+/* === Fixed ==================== */
+.fixed {
+    position: fixed;
+}
+
 /* === Overflow ================= */
 .overflow-hidden {
     overflow: hidden;
+}
+
+.overflow-y {
+    overflow-y: auto;
 }
 
 .overflow-auto {
@@ -236,6 +253,14 @@ html {
 
 .z-index-4 {
     z-index: 4;
+}
+
+.z-index-98 {
+    z-index: 98;
+}
+
+.z-index-100 {
+    z-index: 100;
 }
 
 /* === Opacity =============== */
@@ -410,8 +435,16 @@ html {
     border-top: solid;
 }
 
+.border-bottom {
+    border-bottom: solid;
+}
+
 .border-1 {
     border-width: 0.1rem;
+}
+
+.border-black {
+    border-color: var(--black) !important;
 }
 
 .border-gray-lighter {
@@ -429,10 +462,6 @@ html {
 
 .rounded-circle-10 {
     border-radius: 1rem;
-}
-
-.rounded-circle-29 {
-    border-radius: 2.9rem;
 }
 
 .rounded-circle-35 {
@@ -460,16 +489,28 @@ html {
     padding-top: 1.4rem;
 }
 
-.pt-20 {
-    padding-top: 2rem;
-}
-
 .pt-18 {
     padding-top: 1.8rem;
 }
 
+.pt-19 {
+    padding-top: 1.9rem;
+}
+
+.pt-20 {
+    padding-top: 2rem;
+}
+
+.pt-22 {
+    padding-top: 2.2rem;
+}
+
 .pt-28 {
     padding-top: 2.8rem;
+}
+
+.pt-35 {
+    padding-top: 3.5rem;
 }
 
 /* === Padding Left ========= */
@@ -503,6 +544,13 @@ html {
     padding-bottom: 1.8rem;
 }
 
+.pb-20 {
+    padding-bottom: 2rem;
+}
+
+.pb-22 {
+    padding-bottom: 2.2rem;
+}
 
 .pb-25 {
     padding-bottom: 2.5rem;
@@ -512,7 +560,15 @@ html {
     padding-bottom: 2.6rem;
 }
 
+.pb-30 {
+    padding-bottom: 3rem;
+}
+
 /* === Padding Right ========= */
+.pr-1 {
+    padding-right: 0.1rem;
+}
+
 .pr-12 {
     padding-right: 1.2rem;
 }
@@ -577,14 +633,19 @@ html {
     padding-right: 4rem;
 }
 
+.px-44 {
+    padding-left: 4.4rem;
+    padding-right: 4.4rem;
+}
+
 .px-100 {
     padding-left: 10rem;
     padding-right: 10rem;
 }
 
-.px-44 {
-    padding-left: 4.4rem;
-    padding-right: 4.4rem;
+.px-92 {
+    padding-left: 9.2rem;
+    padding-right: 9.2rem;
 }
 
 /* === Padding Y ========= */
@@ -611,6 +672,11 @@ html {
 .py-16 {
     padding-top: 1.6rem;
     padding-bottom: 1.6rem;
+}
+
+.py-17 {
+    padding-top: 1.7rem;
+    padding-bottom: 1.7rem;
 }
 
 .py-18 {
@@ -677,12 +743,20 @@ html {
     margin-top: 2.3rem;
 }
 
+.mt-26 {
+    margin-top: 2.6rem;
+}
+
 .mt-27 {
     margin-top: 2.7rem;
 }
 
 .mt-28 {
     margin-top: 2.8rem;
+}
+
+.mt-35 {
+    margin-top: 3.5rem;
 }
 
 .mt-44 {
@@ -709,10 +783,6 @@ html {
     margin-top: 6rem;
 }
 
-.mt-65 {
-    margin-top: 6.5rem;
-}
-
 /* === Margin Left ========= */
 .ml-1 {
     margin-left: 0.1rem;
@@ -724,6 +794,10 @@ html {
 
 .ml-5 {
     margin-left: 0.5rem;
+}
+
+.ml-20 {
+    margin-left: 2rem;
 }
 
 .ml-25 {
@@ -767,8 +841,8 @@ html {
     margin-bottom: 3.4rem;
 }
 
-.mb-106 {
-    margin-bottom: 10.6rem;
+.mb-107 {
+    margin-bottom: 10.7rem;
 }
 
 /* === Margin Right ========= */
@@ -782,6 +856,10 @@ html {
 
 .mr-5 {
     margin-right: 0.5rem;
+}
+
+.mr-11 {
+    margin-right: 1.1rem;
 }
 
 .mr-16 {
@@ -861,6 +939,10 @@ html {
 }
 
 /* === Right ========= */
+.right-0 {
+    right: 0rem;
+}
+
 .right-10 {
     right: 1rem;
 }
@@ -1025,6 +1107,17 @@ html {
     from {left: -100%;}
     to {left: 100%;}
 }
+
+/* === Width ==================== */
+.w-100vw {
+    width: 100vw;
+}
+
+/* === Height ==================== */
+.h-100vh {
+    height: 100vh;
+}
+
 /* ======================= */
 .line-notification {
     width: 100%;
@@ -1045,6 +1138,30 @@ html {
 
 .footer-list .active {
     max-height: none;
+}
+
+/* === Progress Bar ==================== */
+.progress-bar {
+    height: 0.5rem;
+    width: 100%;
+}
+
+.progress-fill {
+    height: 100%;
+    width: 28%; /* Giá trị ban đầu, có thể thay đổi bằng JS */
+    background: repeating-linear-gradient(
+        -45deg,
+        var(--orange-red),
+        var(--coral-red) 1rem,
+        var(--dark-red) 1rem,
+        var(--dark-red) 2rem
+    );
+}
+
+.progress-icon {
+    top: -270%;
+    left: 28%;
+    transform: translateX(-50%);
 }
 
 /* === Slider ==================== */
@@ -1109,4 +1226,55 @@ html {
 .rate-label:hover,
 .rate-label:hover ~ label {
     color: var(--black);
+}
+
+/* +--+--+--+-+--+ */
+.cart {
+    width: 45rem;
+    max-width: 45rem;
+    transition: transform 0.4s ease-in-out, opacity 0.4s ease-in-out;
+    transform: translateX(100%);
+    opacity: 0;
+}
+
+.cart.open {
+    transform: translateX(0);
+    opacity: 1;
+}
+
+.overlay-cart {
+    background: rgba(0, 0, 0, 0.5);
+    visibility: hidden;
+    transition: opacity 0.4s ease-in-out;
+}
+
+.overlay-cart.show {
+    opacity: 1;
+    visibility: visible;
+}
+
+/* -- */
+.cart-items {
+    overflow-y: auto; /* Tạo thanh cuộn nếu nội dung quá dài */
+}
+
+.cart-item {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 10px 0;
+    border-bottom: 1px solid #ddd;
+}
+
+.cart-item img {
+    width: 5rem;
+    height: 5rem;
+    object-fit: cover;
+    border-radius: 0.5rem;
+    margin-right: 1rem;
+}
+
+.cart-item .remove {
+    color: var(--gray-dark);
+    cursor: pointer;
 }
