--- a/css/style.css
+++ b/css/style.css
@@ -118,6 +118,12 @@ html {
     cursor: pointer;
 }
 
+/*=== Overlay =================*/
+.overlay {
+    background: rgba(0, 0, 0, 0.5);
+    visibility: hidden;
+}
+
 /*=== Relative =================*/
 .relative {
     position: relative;
@@ -321,6 +327,10 @@ html {
     flex: 0 0 76.7%;
 }
 
+.flex-70pct {
+    flex: 0 0 70%;
+}
+
 .flex-direction-column {
     flex-direction: column;
 }
@@ -514,8 +524,8 @@ html {
 }
 
 /* === Padding Left ========= */
-.pl-20 {
-    padding-left: 2rem;
+.pl-15 {
+    padding-left: 1.5rem;
 }
 
 /* === Padding Bottom ========= */
@@ -654,6 +664,11 @@ html {
     padding-bottom: 0.8rem;
 }
 
+.py-10 {
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+}
+
 .py-11 {
     padding-top: 1.1rem;
     padding-bottom: 1.1rem;
@@ -743,6 +758,10 @@ html {
     margin-top: 2.3rem;
 }
 
+.mt-24 {
+    margin-top: 2.4rem;
+}
+
 .mt-26 {
     margin-top: 2.6rem;
 }
@@ -813,8 +832,16 @@ html {
     margin-bottom: 0.8rem;
 }
 
+.mb-10 {
+    margin-bottom: 1rem;
+}
+
 .mb-14 {
     margin-bottom: 1.4rem;
+}
+
+.mb-15 {
+    margin-bottom: 1.5rem;
 }
 
 .mb-17 {
@@ -1217,7 +1244,7 @@ html {
     background-color: var(--black);
 }
 
-/*=== Rating =================*/
+/* === Rating ================= */
 .rate-input:checked ~ label,
 .rate-input:checked ~ label ~ label {
     color: var(--black);
@@ -1228,10 +1255,10 @@ html {
     color: var(--black);
 }
 
-/* +--+--+--+-+--+ */
+/* === Mini Cart ================= */
 .cart {
     width: 45rem;
-    max-width: 45rem;
+    max-width: 100%;
     transition: transform 0.4s ease-in-out, opacity 0.4s ease-in-out;
     transform: translateX(100%);
     opacity: 0;
@@ -1243,8 +1270,6 @@ html {
 }
 
 .overlay-cart {
-    background: rgba(0, 0, 0, 0.5);
-    visibility: hidden;
     transition: opacity 0.4s ease-in-out;
 }
 
@@ -1253,28 +1278,6 @@ html {
     visibility: visible;
 }
 
-/* -- */
-.cart-items {
-    overflow-y: auto; /* Tạo thanh cuộn nếu nội dung quá dài */
-}
-
 .cart-item {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 10px 0;
-    border-bottom: 1px solid #ddd;
-}
-
-.cart-item img {
-    width: 5rem;
-    height: 5rem;
-    object-fit: cover;
-    border-radius: 0.5rem;
-    margin-right: 1rem;
-}
-
-.cart-item .remove {
-    color: var(--gray-dark);
-    cursor: pointer;
+    border-bottom: 0.1rem solid var(--gray-light);
 }
