--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,7 @@ html {
     --gray-dark: #555555;
     --orange-red: #d0473e;
     --green: #26A66A;
+    --blue: #516CF4;
     --coral-red: #e74c3c;
     --strong-red: #c0392b;
     --dark-red: #c0392b;
@@ -63,6 +64,10 @@ html {
     background-color: var(--green);
 }
 
+.bg-blue {
+    background-color: var(--blue);
+}
+
 /* === Color =============== */
 .color-black {
     color: var(--black);
@@ -94,6 +99,10 @@ html {
 
 .color-green {
     color: var(--green);
+}
+
+.color-blue {
+    color: var(--blue);
 }
 
 /* === Hover ================= */
@@ -282,6 +291,10 @@ html {
     opacity: 0;
 }
 
+.opacity-60 {
+    opacity: 0.6;
+}
+
 /* === Display None =============== */
 .d-none {
     display: none;
@@ -390,6 +403,10 @@ html {
 
 .gap-30 {
     gap: 3rem;
+}
+
+.gap-81 {
+    gap: 8.1rem;
 }
 
 /* === Column ========= */
@@ -507,6 +524,14 @@ html {
     padding-top: 1.4rem;
 }
 
+.pt-16 {
+    padding-top: 1.6rem;
+}
+
+.pt-17 {
+    padding-top: 1.7rem;
+}
+
 .pt-18 {
     padding-top: 1.8rem;
 }
@@ -517,6 +542,10 @@ html {
 
 .pt-20 {
     padding-top: 2rem;
+}
+
+.pt-21 {
+    padding-top: 2.1rem;
 }
 
 .pt-22 {
@@ -531,9 +560,25 @@ html {
     padding-top: 3.5rem;
 }
 
+.pt-47 {
+    padding-top: 4.7rem;
+}
+
+.pt-68 {
+    padding-top: 6.8rem;
+}
+
 /* === Padding Left ========= */
+.pl-10 {
+    padding-left: 1rem;
+}
+
 .pl-15 {
     padding-left: 1.5rem;
+}
+
+.pl-30 {
+    padding-left: 3rem;
 }
 
 /* === Padding Bottom ========= */
@@ -547,6 +592,10 @@ html {
 
 .pb-12 {
     padding-bottom: 1.2rem;
+}
+
+.pb-15 {
+    padding-bottom: 1.5rem;
 }
 
 .pb-16 {
@@ -582,6 +631,10 @@ html {
     padding-bottom: 3rem;
 }
 
+.pb-35 {
+    padding-bottom: 3.5rem;
+}
+
 /* === Padding Right ========= */
 .pr-1 {
     padding-right: 0.1rem;
@@ -591,8 +644,8 @@ html {
     padding-right: 1.2rem;
 }
 
-.pr-30 {
-    padding-right: 4.2rem;
+.pr-20 {
+    padding-right: 2rem;
 }
 
 /* === Padding X ========= */
@@ -606,6 +659,11 @@ html {
     padding-right: 0.2rem;
 }
 
+.px-3 {
+    padding-left: 0.3rem;
+    padding-right: 0.3rem;
+}
+
 .px-4 {
     padding-left: 0.4rem;
     padding-right: 0.4rem;
@@ -614,6 +672,11 @@ html {
 .px-6 {
     padding-left: 0.6rem;
     padding-right: 0.6rem;
+}
+
+.px-10 {
+    padding-left: 1rem;
+    padding-right: 1rem;
 }
 
 .px-12 {
@@ -667,9 +730,24 @@ html {
 }
 
 /* === Padding Y ========= */
+.py-2 {
+    padding-top: 0.2rem;
+    padding-bottom: 0.2rem;
+}
+
 .py-5 {
     padding-top: 0.5rem;
     padding-bottom: 0.5rem;
+}
+
+.py-6 {
+    padding-top: 0.6rem;
+    padding-bottom: 0.6rem;
+}
+
+.py-7 {
+    padding-top: 0.7rem;
+    padding-bottom: 0.7rem;
 }
 
 .py-8 {
@@ -723,6 +801,14 @@ html {
 }
 
 /* === Margin Top ========= */
+.mt-1 {
+    margin-top: 0.1rem;
+}
+
+.mt-2 {
+    margin-top: 0.2rem;
+}
+
 .mt-4 {
     margin-top: 0.4rem;
 }
@@ -741,6 +827,10 @@ html {
 
 .mt-12 {
     margin-top: 1.2rem;
+}
+
+.mt-13 {
+    margin-top: 1.3rem;
 }
 
 .mt-16 {
@@ -828,6 +918,10 @@ html {
     margin-left: 0.5rem;
 }
 
+.ml-10 {
+    margin-left: 1rem;
+}
+
 .ml-20 {
     margin-left: 2rem;
 }
@@ -838,6 +932,10 @@ html {
 
 .ml-29 {
     margin-left: 2.9rem;
+}
+
+.ml-31 {
+    margin-left: 3.1rem;
 }
 
 /* === Margin Bottom ========= */
@@ -863,6 +961,10 @@ html {
 
 .mb-18 {
     margin-bottom: 1.8rem;
+}
+
+.mb-19 {
+    margin-bottom: 1.9rem;
 }
 
 .mb-20 {
@@ -898,6 +1000,10 @@ html {
     margin-right: 0.5rem;
 }
 
+.mr-10 {
+    margin-right: 1rem;
+}
+
 .mr-11 {
     margin-right: 1.1rem;
 }
@@ -930,8 +1036,16 @@ html {
     transform: translateY(-50%);
 }
 
+.top-120pct {
+    top: 120%;
+}
+
 .top-0 {
     top: 0rem;
+}
+
+.top-9 {
+    top: 0.9rem;
 }
 
 .top-10 {
@@ -946,6 +1060,14 @@ html {
 .left-center {
     left: 50%;
     transform: translateX(-50%);
+}
+
+.left--48pct {
+    left: -48%;
+}
+
+.left--180pct {
+    left: -180%;
 }
 
 .left-0 {
@@ -1016,6 +1138,10 @@ html {
 }
 
 /* === Font Size ========= */
+.fs-9 {
+    font-size: 0.9rem;
+}
+
 .fs-10 {
     font-size: 1rem;
 }
@@ -1188,6 +1314,11 @@ html {
     max-height: none;
 }
 
+.wrapper-menu-pc:hover .list-home-pc,
+.wrapper-menu-pc:hover .list-shop-pc {
+    display: block;
+}
+
 /* === Progress Bar ==================== */
 .progress-bar {
     height: 0.5rem;
@@ -1301,4 +1432,11 @@ html {
 
 .cart-item {
     border-bottom: 0.1rem solid var(--gray-light);
+}
+
+/* -+-+-+-+-+-+-+-+-+- */
+.menu-mobile {
+    width: 43rem;
+    max-width: 100%;
+    left: -100%;
 }
