--- a/css/style.css
+++ b/css/style.css
@@ -126,6 +126,10 @@ html {
     filter: brightness(0) invert(0); /* Icon footer */
 }
 
+.hover-border-black:hover {
+    border-color: var(--black);
+}
+
 /*=== Cursor =================*/
 .cursor-pointer {
     cursor: pointer;
@@ -284,6 +288,10 @@ html {
 
 .z-index-100 {
     z-index: 100;
+}
+
+.z-index-102 {
+    z-index: 102;
 }
 
 /* === Opacity =============== */
@@ -640,12 +648,20 @@ html {
     padding-right: 0.1rem;
 }
 
+.pr-4 {
+    padding-right: 0.4rem;
+}
+
 .pr-12 {
     padding-right: 1.2rem;
 }
 
 .pr-20 {
     padding-right: 2rem;
+}
+
+.pr-21 {
+    padding-right: 2.1rem;
 }
 
 /* === Padding X ========= */
@@ -1435,8 +1451,48 @@ html {
 }
 
 /* -+-+-+-+-+-+-+-+-+- */
+.wrapper:hover .icon-language,
+.wrapper:hover .icon-currency {
+    border-color: var(--black);
+}
+
+.wrapper:hover .text-language,
+.wrapper:hover .text-currency {
+    text-decoration: underline;
+}
+
 .menu-mobile {
     width: 43rem;
     max-width: 100%;
-    left: -100%;
+    transition: transform 0.4s ease-in-out, opacity 0.4s ease-in-out;
+    transform: translateX(-100%);
+    opacity: 0;
+}
+
+.menu-mobile.open {
+    transform: translateX(0);
+    opacity: 1;
+}
+
+.overlay-menu-mobile {
+    transition: opacity 0.4s ease-in-out;
+}
+
+.overlay-menu-mobile.show {
+    opacity: 1;
+    visibility: visible;
+}
+
+.sub-home {
+    width: 43rem;
+    max-width: 100%;
+    left: 0;
+    transition: transform 0.4s ease-in-out, opacity 0.4s ease-in-out;
+    transform: translateX(-100%);
+    opacity: 0;
+}
+
+.sub-home.open {
+    transform: translateX(0);
+    opacity: 1;
 }
