--- a/css/style.css
+++ b/css/style.css
@@ -1486,13 +1486,35 @@ html {
 .sub-home {
     width: 43rem;
     max-width: 100%;
-    left: 0;
-    transition: transform 0.4s ease-in-out, opacity 0.4s ease-in-out;
+    transition: transform 0.4s ease-in-out;
     transform: translateX(-100%);
-    opacity: 0;
 }
 
 .sub-home.open {
+    transform: translateX(0);
+}
+
+.sub-shop {
+    width: 43rem;
+    max-width: 100%;
+    transition: transform 0.4s ease-in-out;
+    transform: translateX(-100%);
+}
+
+.sub-shop.open {
+    transform: translateX(0);
+    opacity: 1;
+}
+
+.sub-shop-layout {
+    width: 43rem;
+    max-width: 100%;
+    transition: transform 0.4s ease-in-out;
+    transform: translateX(-100%);
+    left: 0;
+}
+
+.sub-shop-layout.open {
     transform: translateX(0);
     opacity: 1;
 }
