--- a/css/style.css
+++ b/css/style.css
@@ -156,6 +156,11 @@ html {
     position: fixed;
 }
 
+/* === Sticky ==================== */
+.sticky {
+    position: sticky;
+}
+
 /* === Overflow ================= */
 .overflow-hidden {
     overflow: hidden;
@@ -294,6 +299,10 @@ html {
     z-index: 102;
 }
 
+.z-index-999 {
+    z-index: 999;
+}
+
 /* === Opacity =============== */
 .opacity-0 {
     opacity: 0;
@@ -377,6 +386,10 @@ html {
 }
 
 /* === Gap ========= */
+.gap-1 {
+    gap: 0.1rem;
+}
+
 .gap-2 {
     gap: 0.2rem;
 }
@@ -445,6 +458,10 @@ html {
 
 .justify-content-between {
     justify-content: space-between;
+}
+
+.justify-content-around {
+    justify-content: space-around;
 }
 
 /* === Align Items ========= */
@@ -532,6 +549,10 @@ html {
     padding-top: 1.4rem;
 }
 
+.pt-15 {
+    padding-top: 1.5rem;
+}
+
 .pt-16 {
     padding-top: 1.6rem;
 }
@@ -577,14 +598,6 @@ html {
 }
 
 /* === Padding Left ========= */
-.pl-10 {
-    padding-left: 1rem;
-}
-
-.pl-15 {
-    padding-left: 1.5rem;
-}
-
 .pl-30 {
     padding-left: 3rem;
 }
@@ -631,12 +644,16 @@ html {
     padding-bottom: 2.5rem;
 }
 
-.pb-26 {
-    padding-bottom: 2.6rem;
+.pb-28 {
+    padding-bottom: 2.8rem;
 }
 
 .pb-30 {
     padding-bottom: 3rem;
+}
+
+.pb-33 {
+    padding-bottom: 3.3rem;
 }
 
 .pb-35 {
@@ -648,23 +665,11 @@ html {
     padding-right: 0.1rem;
 }
 
-.pr-4 {
-    padding-right: 0.4rem;
-}
-
 .pr-12 {
     padding-right: 1.2rem;
 }
 
-.pr-20 {
-    padding-right: 2rem;
-}
-
-.pr-21 {
-    padding-right: 2.1rem;
-}
-
-/* === Padding X ========= */
+/* === Padding ========= */
 .p-30 {
     padding: 3rem;
 }
@@ -693,11 +698,6 @@ html {
 .px-10 {
     padding-left: 1rem;
     padding-right: 1rem;
-}
-
-.px-12 {
-    padding-left: 1.2rem;
-    padding-right: 1.2rem;
 }
 
 .px-13 {
@@ -735,9 +735,9 @@ html {
     padding-right: 4.4rem;
 }
 
-.px-100 {
-    padding-left: 10rem;
-    padding-right: 10rem;
+.px-45 {
+    padding-left: 4.5rem;
+    padding-right: 4.5rem;
 }
 
 .px-92 {
@@ -745,12 +745,12 @@ html {
     padding-right: 9.2rem;
 }
 
-/* === Padding Y ========= */
-.py-2 {
-    padding-top: 0.2rem;
-    padding-bottom: 0.2rem;
+.px-100 {
+    padding-left: 10rem;
+    padding-right: 10rem;
 }
 
+/* === Padding Y ========= */
 .py-5 {
     padding-top: 0.5rem;
     padding-bottom: 0.5rem;
@@ -759,11 +759,6 @@ html {
 .py-6 {
     padding-top: 0.6rem;
     padding-bottom: 0.6rem;
-}
-
-.py-7 {
-    padding-top: 0.7rem;
-    padding-bottom: 0.7rem;
 }
 
 .py-8 {
@@ -845,10 +840,6 @@ html {
     margin-top: 1.2rem;
 }
 
-.mt-13 {
-    margin-top: 1.3rem;
-}
-
 .mt-16 {
     margin-top: 1.6rem;
 }
@@ -875,10 +866,6 @@ html {
 
 .mt-23 {
     margin-top: 2.3rem;
-}
-
-.mt-24 {
-    margin-top: 2.4rem;
 }
 
 .mt-26 {
@@ -934,20 +921,16 @@ html {
     margin-left: 0.5rem;
 }
 
+.ml-6 {
+    margin-left: 0.6rem;
+}
+
+.ml-9 {
+    margin-left: 0.9rem;
+}
+
 .ml-10 {
     margin-left: 1rem;
-}
-
-.ml-20 {
-    margin-left: 2rem;
-}
-
-.ml-25 {
-    margin-left: 2.5rem;
-}
-
-.ml-29 {
-    margin-left: 2.9rem;
 }
 
 .ml-31 {
@@ -999,10 +982,6 @@ html {
     margin-bottom: 3.4rem;
 }
 
-.mb-107 {
-    margin-bottom: 10.7rem;
-}
-
 /* === Margin Right ========= */
 .mr-3 {
     margin-right: 0.3rem;
@@ -1016,16 +995,8 @@ html {
     margin-right: 0.5rem;
 }
 
-.mr-10 {
-    margin-right: 1rem;
-}
-
 .mr-11 {
     margin-right: 1.1rem;
-}
-
-.mr-16 {
-    margin-right: 1.6rem;
 }
 
 .mr-49 {
@@ -1450,7 +1421,7 @@ html {
     border-bottom: 0.1rem solid var(--gray-light);
 }
 
-/* -+-+-+-+-+-+-+-+-+- */
+/* === Menu Mobile ================= */
 .wrapper:hover .icon-language,
 .wrapper:hover .icon-currency {
     border-color: var(--black);
@@ -1496,4 +1467,10 @@ html {
 .sub-shop.open,
 .sub-shop-layout.open {
     transform: translateX(0);
+}
+
+/* -+-+-+-+-+-+-+-+-+-+-+- */
+.sticky-bottom {
+    transform: translateY(100%);
+    transition: transform 0.3s ease-in-out;
 }
