--- a/css/style.css
+++ b/css/style.css
@@ -141,6 +141,11 @@ html {
     visibility: hidden;
 }
 
+/*=== Box-Border =================*/
+.box-border {
+    box-sizing: border-box;
+}
+  
 /*=== Relative =================*/
 .relative {
     position: relative;
@@ -432,7 +437,7 @@ html {
 
 /* === Column ========= */
 .col-1-gap-2 {
-    flex: 0 0 calc(100% - 6.2rem);
+    flex: 0 0 calc(100% - 0.2rem);
 }
 
 .col-2-gap-20 {
@@ -441,6 +446,10 @@ html {
 
 .col-2-gap-5 {
     flex: 0 0 calc(calc(100% - 0.5rem) /2);
+}
+
+.col-33pct {
+    flex: 0 0 33.33%;
 }
 
 /* === Justify Content ========= */
@@ -602,9 +611,17 @@ html {
     padding-left: 3rem;
 }
 
+.pl-255 {
+    padding-left: 25.5rem;
+}
+
 /* === Padding Bottom ========= */
 .pb-1 {
     padding-bottom: 0.1rem;
+}
+
+.pb-3 {
+    padding-bottom: 0.3rem;
 }
 
 .pb-4 {
@@ -669,6 +686,18 @@ html {
     padding-right: 1.2rem;
 }
 
+.pr-21 {
+    padding-right: 2.1rem;
+}
+
+.pr-35 {
+    padding-right: 3.5rem;
+}
+
+.pr-261 {
+    padding-right: 26.1rem;
+}
+
 /* === Padding ========= */
 .p-30 {
     padding: 3rem;
@@ -690,9 +719,19 @@ html {
     padding-right: 0.4rem;
 }
 
+.px-5 {
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
+}
+
 .px-6 {
     padding-left: 0.6rem;
     padding-right: 0.6rem;
+}
+
+.px-7 {
+    padding-left: 0.7rem;
+    padding-right: 0.7rem;
 }
 
 .px-10 {
@@ -767,6 +806,11 @@ html {
 }
 
 /* === Padding Y ========= */
+.py-3 {
+    padding-top: 0.3rem;
+    padding-bottom: 0.3rem;
+}
+
 .py-5 {
     padding-top: 0.5rem;
     padding-bottom: 0.5rem;
@@ -836,6 +880,10 @@ html {
     margin-top: 0.2rem;
 }
 
+.mt-3 {
+    margin-top: 0.3rem;
+}
+
 .mt-4 {
     margin-top: 0.4rem;
 }
@@ -884,6 +932,10 @@ html {
     margin-top: 2.3rem;
 }
 
+.mt-24 {
+    margin-top: 2.4rem;
+}
+
 .mt-26 {
     margin-top: 2.6rem;
 }
@@ -900,8 +952,8 @@ html {
     margin-top: 3.5rem;
 }
 
-.mt-44 {
-    margin-top: 4.4rem;
+.mt-43 {
+    margin-top: 4.3rem;
 }
 
 .mt-54 {
@@ -929,6 +981,10 @@ html {
     margin-left: 0.1rem;
 }
 
+.ml-3 {
+    margin-left: 0.3rem;
+}
+
 .ml-4 {
     margin-left: 0.4rem;
 }
@@ -947,6 +1003,18 @@ html {
 
 .ml-10 {
     margin-left: 1rem;
+}
+
+.ml-20 {
+    margin-left: 2rem;
+}
+
+.ml-25 {
+    margin-left: 2.5rem;
+}
+
+.ml-29 {
+    margin-left: 2.9rem;
 }
 
 .ml-31 {
@@ -999,6 +1067,14 @@ html {
 }
 
 /* === Margin Right ========= */
+.mr-1 {
+    margin-right: 0.1rem;
+}
+
+.mr-2 {
+    margin-right: 0.2rem;
+}
+
 .mr-3 {
     margin-right: 0.3rem;
 }
@@ -1013,6 +1089,10 @@ html {
 
 .mr-11 {
     margin-right: 1.1rem;
+}
+
+.mr-25 {
+    margin-right: 2.5rem;
 }
 
 .mr-49 {
@@ -1110,8 +1190,8 @@ html {
     bottom: 15.6rem;
 }
 
-.bottom-55pct {
-    bottom: 55%;
+.bottom-30pct {
+    bottom: 40%;
 }
 
 /* === Right ========= */
@@ -1135,7 +1215,7 @@ html {
     right: 3rem;
 }
 
-.right-5pct {
+.right-2pct {
     right: 5%;
 }
 
@@ -1146,6 +1226,10 @@ html {
 
 .lh-24 {
     line-height: 2.4rem;
+}
+
+.lh-28 {
+    line-height: 2.8rem;
 }
 
 .lh-45 {
