--- a/css/responsive.css
+++ b/css/responsive.css
@@ -378,12 +378,16 @@
     margin-top: 9.5rem;
    }
 
+   .mt-xl-97 {
+    margin-top: 9.7rem;
+   }
+
    .mt-xl-100 {
     margin-top: 10rem;
    }
 
-   .mt-xl-105 {
-    margin-top: 10.5rem;
+   .mt-xl-106 {
+    margin-top: 10.6rem;
    }
 
    .ml-xl-6 {
@@ -447,8 +451,8 @@
     bottom: 3rem;
    }
 
-   .bottom-xl-45 {
-    bottom: 4.5rem;
+   .bottom-xl-43 {
+    bottom: 4.3rem;
    }
 
    .icon-xl-trending,
