--- a/css/style.css
+++ b/css/style.css
@@ -888,6 +888,14 @@ html {
     margin-top: 0.4rem;
 }
 
+.mt-6 {
+    margin-top: 0.6rem;
+}
+
+.mt-7 {
+    margin-top: 0.7rem;
+}
+
 .mt-8 {
     margin-top: 0.8rem;
 }
@@ -898,6 +906,10 @@ html {
 
 .mt-10 {
     margin-top: 1rem;
+}
+
+.mt-11 {
+    margin-top: 1.1rem;
 }
 
 .mt-12 {
