--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,7 @@ html {
     /* ========= */
     --height-slider: 55rem;
     --position-img-slider: 60% center;
+    --bs-font-jost: Jost;
 }
 
 /* === Background Color =============== */
@@ -234,6 +235,10 @@ html {
 }
 
 /*=== Text =================*/
+.font-jost {
+    font-family: var(--bs-font-jost);
+}
+
 .text-center {
     text-align: center;
 }
@@ -248,6 +253,14 @@ html {
 
 .text-hover-gray:hover {
     color: var(--gray-dark);
+}
+
+.ls-0 {
+    letter-spacing: 0%;
+}
+
+.va-middle {
+    vertical-align: middle;
 }
 
 /* === Img =============== */
@@ -1540,3 +1553,4 @@ html {
 .sticky-bottom.show {
     transform: translateY(0); /* Hiện từ dưới lên */
 }
+
