--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,5 +1,9 @@
 /* ssm */
 @media screen and (max-width: 375.98px) {
+    .gap-ssm-2 {
+        gap: 0.2rem;
+    }
+    
     .gap-ssm-10 {
         gap: 1rem;
     }
