--- a/css/style.css
+++ b/css/style.css
@@ -805,6 +805,11 @@ html {
     padding-right: 4.5rem;
 }
 
+.px-80 {
+    padding-left: 8rem;
+    padding-right: 8rem;
+}
+
 .px-100 {
     padding-left: 10rem;
     padding-right: 10rem;
@@ -1444,7 +1449,6 @@ html {
 
 .progress-fill {
     height: 100%;
-    width: 28%; /* Giá trị ban đầu, có thể thay đổi bằng JS */
     background: repeating-linear-gradient(
         -45deg,
         var(--orange-red),
@@ -1456,7 +1460,6 @@ html {
 
 .progress-icon {
     top: -270%;
-    left: 28%;
     transform: translateX(-50%);
 }
 
