--- a/css/style.css
+++ b/css/style.css
@@ -135,6 +135,11 @@ html {
     cursor: pointer;
 }
 
+/*=== Pointer =================*/
+.pointer-none {
+    pointer-events: none;
+}
+
 /*=== Overlay =================*/
 .overlay {
     background: rgba(0, 0, 0, 0.5);
@@ -1194,8 +1199,12 @@ html {
     bottom: 15.6rem;
 }
 
-.bottom-30pct {
+.bottom-40pct {
     bottom: 40%;
+}
+
+.bottom-68pct {
+    bottom: 68%;
 }
 
 /* === Right ========= */
@@ -1219,7 +1228,11 @@ html {
     right: 3rem;
 }
 
-.right-2pct {
+.right-45 {
+    right: 4.5rem;
+}
+
+.right-5pct {
     right: 5%;
 }
 
@@ -1394,6 +1407,10 @@ html {
 /* === Width ==================== */
 .w-100vw {
     width: 100vw;
+}
+
+.w-fit-content {
+    width: fit-content;
 }
 
 .w-40 {
