--- a/css/style.css
+++ b/css/style.css
@@ -1459,7 +1459,7 @@ html {
 
 .list-home-pc,
 .list-shop-pc {
-    transition: transform, opacity, 0.4s ease-in-out;
+    transition: transform, opacity, 0.2s ease-in-out;
     z-index: -1;
 }
 
@@ -1641,3 +1641,14 @@ html {
 .sticky-bottom.show {
     transform: translateY(0);
 } */
+
+.block-animation {
+    opacity: 0;
+    transform: translateY(20px);
+    transition: opacity 0.6s ease, transform 0.6s ease;
+}
+
+.block-animation.show {
+    opacity: 1;
+    transform: translateY(0);
+}
