--- a/css/style.css
+++ b/css/style.css
@@ -1644,7 +1644,7 @@ html {
 
 .block-animation {
     opacity: 0;
-    transform: translateY(20px);
+    transform: translateY(5rem);    
     transition: opacity 0.6s ease, transform 0.6s ease;
 }
 
